--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "support": {
         "issues": "https://github.com/oralunal/apai-io/issues"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": ">=5.6.0",
