--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 
-sudo: false
+sudo: required
 
 dist: trusty
 
@@ -19,4 +19,4 @@ script:
 before_script:
     # php deps
     - composer self-update
-    - composer install --dev
+    - composer install
